Improve hospital notebook

--- a/notebooks/data_collection_hospital.ipynb
+++ b/notebooks/data_collection_hospital.ipynb
@@ -1,33 +1,44 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 14,
+   "cell_type": "markdown",
+   "id": "b7e37122",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Summary of Results:\n",
-      "Total healthcare facility names retrieved: 63837\n",
-      "Total unique healthcare facility names after filtering: 23450\n",
-      "Total person name entries removed: 40387\n"
-     ]
-    }
-   ],
+   "source": [
+    "# Hospital Name Collection from OpenStreetMap\n",
+    "This notebook demonstrates how to retrieve, clean and combine hospital facility names from OpenStreetMap in Germany. All output files are stored in `data/hospital`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a522e52b",
+   "metadata": {},
+   "source": [
+    "## Step 1: Setup\n",
+    "Install the required packages using `pip install -r requirements.txt` and download the SpaCy model via `python -m spacy download de_core_news_lg`. Then run the cells below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df613cd4",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import overpy\n",
     "import spacy\n",
-    "import re\n",
     "\n",
-    "# Initialize the Overpass API\n",
-    "api = overpy.Overpass()  # Read Only connection to OpenStreetMap\n",
+    "api = overpy.Overpass()\n",
     "\n",
-    "# Load the SpaCy German model for NER\n",
-    "nlp = spacy.load(\"de_core_news_lg\")\n",
-    "\n",
+    "nlp = spacy.load('de_core_news_lg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Function to modify name by appending specialty\n",
     "def modify_name(name, speciality):\n",
     "    # Process speciality to replace ';' with ' / '\n",
@@ -110,19 +121,19 @@
     "                person_names_removed.add(modified_name)\n",
     "\n",
     "    # Save all facility names to a text file\n",
-    "    all_output_file = './data/OpenStreetMap_data/all_healthcare_facilities.txt'\n",
+    "    all_output_file = './data/hospital/full_unfiltered_osm_healthcare_facilities.txt'\n",
     "    with open(all_output_file, 'w', encoding='utf-8') as f:\n",
     "        for name in sorted(all_facility_names):\n",
     "            f.write(name + '\\n')\n",
     "\n",
     "    # Save the modified filtered facility names to a text file\n",
-    "    modified_filtered_output_file = './data/OpenStreetMap_data/filtered_healthcare_facilities.txt'\n",
+    "    modified_filtered_output_file = './data/hospital/location_hospital.txt'\n",
     "    with open(modified_filtered_output_file, 'w', encoding='utf-8') as f:\n",
     "        for name in filtered_facility_names:\n",
     "            f.write(name + '\\n')\n",
     "\n",
     "    # Save the person names that were removed to a separate text file\n",
-    "    person_removed_file = './data/OpenStreetMap_data/person_names_removed.txt'\n",
+    "    person_removed_file = './data/hospital/person_names_removed.txt'\n",
     "    with open(person_removed_file, 'w', encoding='utf-8') as f:\n",
     "        for name in sorted(person_names_removed):\n",
     "            f.write(name + '\\n')\n",
@@ -149,12 +160,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Add wrongly classified strings back to the Hospital List based on keywords"
+    "## Step 2: Re-add entries flagged as names\n",
+    "The previous step may incorrectly classify some facilities as person names. The following cell adds them back if they contain medical keywords."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,8 +200,8 @@
     "    return facility.split('/')[0].strip()\n",
     "\n",
     "# File paths\n",
-    "person_names_removed_path = \"./data/OpenStreetMap_data/person_names_removed.txt\"\n",
-    "filtered_healthcare_facilities_path = \"./data/OpenStreetMap_data/filtered_healthcare_facilities.txt\"\n",
+    "person_names_removed_path = \"./data/hospital/person_names_removed.txt\"\n",
+    "filtered_healthcare_facilities_path = \"./data/hospital/location_hospital.txt\"\n",
     "\n",
     "# Load the list of person names\n",
     "person_names_removed = read_file(person_names_removed_path)\n",
@@ -256,19 +268,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Remove Apoptheke from lists"
+    "## Step 3: Remove entries related to pharmacies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define paths for the input and output files\n",
-    "person_names_removed_path = \"./data/OpenStreetMap_data/person_names_removed.txt\"\n",
-    "filtered_healthcare_facilities_path = \"./data/OpenStreetMap_data/filtered_healthcare_facilities.txt\"\n",
-    "apotheke_path = \"./data/OpenStreetMap_data/apotheke_entries.txt\"\n",
+    "person_names_removed_path = \"./data/hospital/person_names_removed.txt\"\n",
+    "filtered_healthcare_facilities_path = \"./data/hospital/location_hospital.txt\"\n",
+    "apotheke_path = \"./data/hospital/apotheke_entries.txt\"\n",
     "\n",
     "def remove_and_store_apotheke_entries(input_path, output_path):\n",
     "    # Read the input file\n",
@@ -290,27 +302,27 @@
     "\n",
     "# Run the function for both input files\n",
     "remove_and_store_apotheke_entries(person_names_removed_path, apotheke_path)\n",
-    "remove_and_store_apotheke_entries(filtered_healthcare_facilities_path, apotheke_path)\n"
+    "remove_and_store_apotheke_entries(filtered_healthcare_facilities_path, apotheke_path)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Remove Doctor Names from Hospital list with Regex Pattern"
+    "## Step 4: Remove doctor names using regex patterns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
     "\n",
     "# File paths\n",
-    "filtered_healthcare_facilities_path = \"./data/OpenStreetMap_data/filtered_healthcare_facilities.txt\"\n",
-    "person_names_removed_path = \"./data/OpenStreetMap_data/person_names_removed.txt\"\n",
+    "filtered_healthcare_facilities_path = \"./data/hospital/location_hospital.txt\"\n",
+    "person_names_removed_path = \"./data/hospital/person_names_removed.txt\"\n",
     "\n",
     "# 1. Pattern to match one or more titles followed by optional punctuation and spaces\n",
     "title_pattern = r\"(?:(?:dr|phil|univ|medic|dres|med|dipl|psych|dent|vet)(?:\\.|\\b)\\s*)+\"\n",
@@ -389,27 +401,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Combine two Hospital Lists"
+    "## Step 5: Combine with an additional hospital list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Combined list saved to /home/mseiferling/vector_search/data/OpenStreetMap_data/Combined_healthcare_facilities.txt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define the file paths\n",
-    "healthcare_path = \"/home/mseiferling/vector_search/data/OpenStreetMap_data/filtered_healthcare_facilities.txt\"\n",
-    "krankenhaus_path = \"/home/mseiferling/vector_search/data/Krankenhaus.txt\"\n",
-    "output_file = \"/home/mseiferling/vector_search/data/OpenStreetMap_data/Combined_healthcare_facilities.txt\"\n",
+    "healthcare_path = \"./data/hospital/location_hospital.txt\"\n",
+    "krankenhaus_path = \"./data/hospital/Krankenhaus.txt\"\n",
+    "output_file = \"./data/hospital/Combined_healthcare_facilities.txt\"\n",
     "\n",
     "# Initialize a dictionary to map main names to full entries\n",
     "combined_hospitals = {}\n",
@@ -447,45 +451,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define the input and output file paths\n",
-    "input_file = \"/home/mseiferling/vector_search/data/OpenStreetMap_data/Combined_healthcare_facilities.txt\"\n",
-    "output_file = \"/home/mseiferling/vector_search/data/OpenStreetMap_data/new_Combined_healthcare_facilities.txt\"\n",
+    "input_file = \"./data/hospital/Combined_healthcare_facilities.txt\"\n",
+    "output_file = \"./data/hospital/new_Combined_healthcare_facilities.txt\"\n",
     "\n",
     "# Open the input file, clean the lines, and write to the output file\n",
     "with open(input_file, 'r', encoding='utf-8', errors='replace') as infile, open(output_file, 'w', encoding='utf-8') as outfile:\n",
     "    for line in infile:\n",
     "        # Replace unusual line terminators (PS, LS) with standard newlines\n",
     "        cleaned_line = line.replace('\\u2028', '\\n').replace('\\u2029', '\\n').strip()  # LS = \\u2028, PS = \\u2029\n",
-    "        outfile.write(cleaned_line + '\\n')\n"
+    "        outfile.write(cleaned_line + '\\n')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Playground"
+    "## Step 6: Example NER check"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Allgemeinarztpraxis Dr. Killer -> MISC\n",
-      "Token: Allgemeinarztpraxis, POS: NOUN\n",
-      "Token: Dr., POS: NOUN\n",
-      "Token: Killer, POS: NOUN\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import spacy\n",
     "\n",
