--- a/notebooks/data_collection_organization.ipynb
+++ b/notebooks/data_collection_organization.ipynb
@@ -48,8 +48,7 @@
     "        if name and name.lower() != \"no name\":\n",
     "            names.add(name)\n",
     "\n",
-    "print(f\"\n",
-    "Total unique names: {len(names):,}\")\n"
+    "print(f\"Total unique names: {len(names):,}\")\n"
    ]
   },
   {
@@ -63,8 +62,7 @@
     "out_path.mkdir(parents=True, exist_ok=True)\n",
     "with out_path.joinpath(\"organizations_office_craft_club_industrial.txt\").open(\"w\", encoding=\"utf-8\") as fh:\n",
     "    for name in sorted(names, key=str.casefold):\n",
-    "        fh.write(name + \"\n",
-    "\")\n",
+    "        fh.write(name + '\\n')\n",
     "print(\"Saved to\", fh.name)\n"
    ]
   }
