--- a/notebooks/data_collection_other.ipynb
+++ b/notebooks/data_collection_other.ipynb
@@ -341,9 +341,8 @@
     "out_path.mkdir(parents=True, exist_ok=True)\n",
     "with out_path.joinpath(\"location_other_osm_primary_map_features.txt\").open(\"w\", encoding=\"utf-8\") as f:\n",
     "    for name in sorted(names, key=str.casefold):\n",
-    "        f.write(name + \"\n",
-    "\")\n",
-    "print(\"Saved to\", f.name)\n"
+    "        f.write(name + '\\n')\n",
+    "print(\"Saved to\", f.name)"
    ]
   }
  ],
